force-app/main/default/objects/Authorised_Signatory__c/Authorised_Signatory__c.object-meta.xml
<CustomObject>
    <description>Digitization: Onboarding - The signatories that the client indicated on the application form related to the bank account that they have applied for</description>
    <label>Authorised Signatory</label>
    <nameField>
        <displayFormat>AAS-{000000000}</displayFormat>
        <label>Authorised Signatory Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorised Signatories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>