force-app/main/default/objects/Authorised_Signatory__c/fields/Account_Application__c.field-meta.xml
<CustomField>
    <fullName>Account_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Application</label>
    <referenceTo>Account_Application__c</referenceTo>
    <relationshipLabel>Authorised Signatories</relationshipLabel>
    <relationshipName>Authorised_Signatories</relationshipName>
    <type>Lookup</type>
</CustomField>