force-app/main/default/objects/Authorised_Signatory__c/fields/Signing_Arrangements__c.field-meta.xml
<CustomField>
    <fullName>Signing_Arrangements__c</fullName>
    <label>Signing Arrangements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>