force-app/main/default/objects/Authorised_Signatory__c/fields/Signing_Limits__c.field-meta.xml
<CustomField>
    <fullName>Signing_Limits__c</fullName>
    <label>Signing Limits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>